--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="icon_40">40dp</dimen>
     <dimen name="img_list_150">150dp</dimen>
     <dimen name="img_detail_250">250dp</dimen>
+    <dimen name="size_3">3dp</dimen>
+    <dimen name="size_4">4dp</dimen>
 </resources>
