--- a/app/src/main/res/layout/fragment_characters.xml
+++ b/app/src/main/res/layout/fragment_characters.xml
@@ -25,4 +25,15 @@
 
     </ScrollView>
 
+    <ProgressBar
+        android:id="@+id/pbLoading"
+        android:layout_width="@dimen/bar_size"
+        android:layout_height="@dimen/bar_size"
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
