--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="size_3">3dp</dimen>
     <dimen name="size_4">4dp</dimen>
     <dimen name="bar_size">100dp</dimen>
+    <dimen name="text_20">20sp</dimen>
 </resources>
