--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,14 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetailFragment">
+    android:background="@color/black"
+    tools:context=".ui.characterdetail.view.DetailFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ImageView
+        android:id="@+id/ivDetailImage"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="@dimen/img_detail_250"
+        android:scaleType="fitXY"
+        android:src="@drawable/rick_morty"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/tvDetailCharacterName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/char_name"
+        android:textSize="@dimen/text_detail_15"
+        android:textColor="@color/white"
+        android:layout_marginTop="@dimen/size_16"
+        android:layout_marginStart="@dimen/size_30"
+        app:layout_constraintTop_toBottomOf="@id/ivDetailImage"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+    <TextView
+        android:id="@+id/tvDetailCharacterStatus"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/char_name"
+        android:textSize="@dimen/text_detail_15"
+        android:textColor="@color/white"
+        android:layout_marginTop="@dimen/size_8"
+        android:layout_marginStart="@dimen/size_30"
+        app:layout_constraintTop_toBottomOf="@id/tvDetailCharacterName"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+    <TextView
+        android:id="@+id/tvDetailCharacterSpecie"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/char_name"
+        android:textSize="@dimen/text_detail_15"
+        android:textColor="@color/white"
+        android:layout_marginTop="@dimen/size_8"
+        android:layout_marginStart="@dimen/size_30"
+        app:layout_constraintTop_toBottomOf="@id/tvDetailCharacterStatus"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+    <TextView
+        android:id="@+id/tvDetailCharacterGender"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/char_name"
+        android:textSize="@dimen/text_detail_15"
+        android:textColor="@color/white"
+        android:layout_marginTop="@dimen/size_8"
+        android:layout_marginStart="@dimen/size_30"
+        app:layout_constraintTop_toBottomOf="@id/tvDetailCharacterSpecie"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-</FrameLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
