--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -65,6 +65,14 @@
         app:layout_constraintTop_toBottomOf="@id/tvDetailCharacterSpecie"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
-
+    <ImageView
+        android:id="@+id/ivIcon"
+        android:layout_width="@dimen/icon_40"
+        android:layout_height="@dimen/icon_40"
+        android:src="@drawable/ic_disfavor"
+        app:layout_constraintTop_toBottomOf="@id/ivDetailImage"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="@dimen/size_16"
+        android:layout_marginTop="@dimen/size_16"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
