--- a/app/src/main/res/layout/fragment_characters.xml
+++ b/app/src/main/res/layout/fragment_characters.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.characterslist.CharactersFragment">
+    tools:context=".ui.characterslist.view.CharactersFragment">
 
     <ScrollView
         android:id="@+id/scrollview"
