--- a/app/src/main/res/layout/fragment_characters.xml
+++ b/app/src/main/res/layout/fragment_characters.xml
@@ -19,8 +19,11 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvCharactersList"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            tools:listitem="@layout/character_item"/>
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/size_8"
+            tools:listitem="@layout/character_item"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:spanCount="2"/>
 
     </ScrollView>
 
