--- a/app/src/main/res/layout/character_item.xml
+++ b/app/src/main/res/layout/character_item.xml
@@ -1,48 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="@dimen/size_8"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/size_8"
     android:id="@+id/Item">
 
-    <androidx.cardview.widget.CardView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="@dimen/size_4" >
+        android:layout_height="wrap_content">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <ImageView
+            android:id="@+id/ivCharacterImage"
             android:layout_width="match_parent"
+            android:layout_height="@dimen/img_list_150"
+            android:src="@drawable/rick_morty"
+            android:scaleType="fitXY"
+            app:shapeAppearanceOverlay="@style/RoundedSquare"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/tvCharacterName"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/tvCharacterName"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@color/black">
+            android:text="@string/char_name"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="@dimen/text_list_14"
+            android:background="@color/black"
+            android:padding="@dimen/size_3"
+            app:layout_constraintTop_toBottomOf="@id/ivCharacterImage"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/ivCharacterImage"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/img_list_150"
-                android:src="@drawable/rick_morty"
-                android:scaleType="fitXY"
-                app:shapeAppearanceOverlay="@style/RoundedSquare"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/tvCharacterName"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
-
-            <TextView
-                android:id="@+id/tvCharacterName"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/char_name"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                android:textSize="@dimen/text_list_14"
-                app:layout_constraintTop_toBottomOf="@id/ivCharacterImage"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
-
-</androidx.appcompat.widget.LinearLayoutCompat>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
