--- a/app/src/main/res/layout/character_item.xml
+++ b/app/src/main/res/layout/character_item.xml
@@ -26,12 +26,13 @@
 
         <TextView
             android:id="@+id/tvCharacterName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/size_30"
             android:text="@string/char_name"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="@dimen/text_list_14"
+            android:textStyle="bold"
             android:background="@color/black"
             android:padding="@dimen/size_3"
             app:layout_constraintTop_toBottomOf="@id/ivCharacterImage"
